# video-game

./: CMakeLists.txt  CMakePresets.json  README.md
build-vs2022/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  engine_config_loader_tests.vcxproj  engine_config_loader_tests.vcxproj.filters  engine_playtest.vcxproj  engine_playtest.vcxproj.filters  engine_prototype.sln  engine_prototype.vcxproj  engine_prototype.vcxproj.filters  playtest_simulation_tests.vcxproj  playtest_simulation_tests.vcxproj.filters  subsystem_pipeline_tests.vcxproj  subsystem_pipeline_tests.vcxproj.filters  world_clock_tests.vcxproj  world_clock_tests.vcxproj.filters  world_tests.vcxproj  world_tests.vcxproj.filters
build-vs2022/engine_config_loader_tests.dir/Debug/: engine_config_loader_tests.exe.recipe  engine_config_loader_tests.ilk
build-vs2022/engine_config_loader_tests.dir/Debug/engine_c.40CED425.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-vs2022/engine_playtest.dir/Debug/engine_playtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
build-vs2022/engine_prototype.dir/Debug/: engine_prototype.exe.recipe  engine_prototype.ilk
build-vs2022/engine_prototype.dir/Debug/engine_prototype.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-vs2022/playtest_simulation_tests.dir/Debug/playtest.3BEC8413.tlog/: CL.command.1.tlog  (+2 more)
build-vs2022/subsystem_pipeline_tests.dir/Debug/: subsystem_pipeline_tests.exe.recipe  subsystem_pipeline_tests.ilk
build-vs2022/world_clock_tests.dir/Debug/: world_clock_tests.exe.recipe  world_clock_tests.ilk
build-vs2022/world_tests.dir/Debug/: world_tests.exe.recipe  world_tests.ilk
config/: engine.cfg
src/: main.cpp
src/core/: Collider.hpp  ColliderStore.cpp  ColliderStore.hpp  Engine.cpp  Engine.hpp  EngineConfig.hpp  EngineConfigLoader.cpp  EngineConfigLoader.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  FrameContext.hpp  GameLoop.cpp  GameLoop.hpp  Gravity.hpp  GravityStore.cpp  GravityStore.hpp  ISubsystem.hpp  SubsystemContext.hpp  SubsystemPipeline.cpp  SubsystemPipeline.hpp  Transform.hpp  TransformStore.cpp  TransformStore.hpp  Velocity.hpp  VelocityStore.cpp  VelocityStore.hpp  World.cpp  World.hpp  WorldClock.cpp  WorldClock.hpp
src/playtest/: ActionRules.cpp  ActionRules.hpp  BulletRules.cpp  BulletRules.hpp  PlaytestApp.cpp  PlaytestApp.hpp  PlaytestSimulation.cpp  PlaytestSimulation.hpp  PlaytestState.hpp  RenderStyleLibrary.cpp  RenderStyleLibrary.hpp  VisualRules.cpp  VisualRules.hpp  WorldProperties.hpp  main_playtest.cpp
src/subsystems/: Physics.cpp  Physics.hpp  Renderer.cpp  Renderer.hpp  WorldSim.cpp  WorldSim.hpp
tests/: EngineConfigLoaderTests.cpp  PlaytestSimulationTests.cpp  SubsystemPipelineTests.cpp  WorldClockTests.cpp  WorldTests.cpp
(+30 files in other folders)
